# notepad

./: .env  Cargo.toml  README.md  Rocket.toml  init.sql
migrations/2021-02-22-211247_create_account/: up.sql
migrations/2021-02-22-211414_create_notepad/: down.sql  up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
src/db/: account.rs  notepad.rs
src/models/: account.rs  mod.rs  notepad.rs
src/routes/: error.rs  index.rs  mod.rs  notepad.rs  sign_in.rs  sign_out.rs  sign_up.rs
static/: style.css
templates/: base.html.tera  error.tera  index.tera  notepad.tera  sign-in.tera  sign-up.tera  success.tera
