[package]
name = "notepad"
version = "0.1.0"
authors = ["frustak"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres"] }
jsonwebtoken = "7.2.0"
bcrypt  = "0.9.0"
chrono = "0.4.19"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]